// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllApps Component It should render 1`] = `
<div
  className="appointments"
  style={
    Object {
      "backgroundImage": "url( tomford.jpg)",
    }
  }
>
  <div
    className="overlayDiv"
  >
    <h1
      className="Apps"
    >
      Your Appointment Dates
    </h1>
    <hr
      className=" AppsLine"
    />
    <a
      className="HOME"
      href="/Home"
      onClick={[Function]}
    >
      <button
        className="HOME"
        type="button"
      >
        HOME
      </button>
    </a>
    <ul
      className="ul"
    />
  </div>
</div>
`;

exports[`App Component It should render 1`] = `
<h1>
  Something went wrong.
</h1>
`;

exports[`Home Component It should render 1`] = `
<h1>
  Something went wrong.
</h1>
`;

exports[`Login Component It should render 1`] = `
<h1>
  Something went wrong.
</h1>
`;

exports[`Nav Component It should render 1`] = `
<nav
  className="nav flex-column navbar-light "
>
  <div
    className="container-fluid"
  >
    <span
      className="navbar-brand mb-0 h1"
    >
      <h1
        className="NavHead"
      >
        FrameFace
      </h1>
    </span>
    <div
      className="home"
    >
      <a
        className="Link home"
        href="/Home"
        onClick={[Function]}
      >
        Home
      </a>
    </div>
    <div
      className="appoint"
    >
      <a
        className="Link login1"
        href="/Appoint"
        onClick={[Function]}
      >
        Appointments
      </a>
    </div>
    <div
      className="iconDiv"
    >
      <img
        alt="icon"
        className="icon2"
        src="twitter3.png"
      />
      <img
        alt="icon"
        className="icon2"
        src="facebook2.png"
      />
      <img
        alt="icon"
        className="icon2"
        src="pinterest.png"
      />
      <img
        alt="icon"
        className="icon2"
        src="google.png"
      />
    </div>
  </div>
</nav>
`;

exports[`Profile Component It should render 1`] = `
Array [
  <nav
    className="nav flex-column navbar-light "
  >
    <div
      className="container-fluid"
    >
      <span
        className="navbar-brand mb-0 h1"
      >
        <h1
          className="NavHead"
        >
          FrameFace
        </h1>
      </span>
      <div
        className="home"
      >
        <a
          className="Link home"
          href="/Home"
          onClick={[Function]}
        >
          Home
        </a>
      </div>
      <div
        className="appoint"
      >
        <a
          className="Link login1"
          href="/Appoint"
          onClick={[Function]}
        >
          Appointments
        </a>
      </div>
      <div
        className="iconDiv"
      >
        <img
          alt="icon"
          className="icon2"
          src="twitter3.png"
        />
        <img
          alt="icon"
          className="icon2"
          src="facebook2.png"
        />
        <img
          alt="icon"
          className="icon2"
          src="pinterest.png"
        />
        <img
          alt="icon"
          className="icon2"
          src="google.png"
        />
      </div>
    </div>
  </nav>,
  <div
    className="accent1"
  />,
  <div
    className="words"
  >
    <img
      className="logo1"
      src="No Logo"
      width="250px"
    />
    <br />
    <br />
    <h1
      className="makeAppoint"
    >
      Make an appointment with us!
    </h1>
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="dateInput"
      >
        Appointment Date:
        <input
          className="form-control"
          id="dateInput"
          max="2050-12-31"
          min="2021-01-01"
          name="date"
          onChange={[Function]}
          type="date"
        />
      </label>
      <br />
      <br />
      <label
        htmlFor="city"
      >
        City:
        <select
          className="form-control cities"
          id="city"
          name="city"
          onChange={[Function]}
        >
          <option
            value="New York"
          >
            New York
          </option>
          <option
            value="Los Angeles"
          >
            Los Angeles
          </option>
          <option
            value="Chicago"
          >
            Chicago
          </option>
        </select>
      </label>
      <br />
      <br />
      <label
        htmlFor="make"
      >
        Designer:
        <input
          className="form-control design"
          id="make"
          name="make"
          readOnly={true}
          type="text"
        />
      </label>
      <br />
      <br />
      <button
        className="submit"
        type="submit"
      >
        Make Appointment
      </button>
    </form>
    <div
      className="imgDiv"
    >
      <img
        alt="colors"
        className="colors"
        src="colors.png"
      />
    </div>
  </div>,
  <img
    alt="frm"
    className="frame"
  />,
]
`;
